# ctcsound7

./: .cirrus.yml  .gitignore  MANIFEST.in  README.md  README.rst  csoundSession.py  ctcsound7.py  pyproject.toml  pyrightconfig.json  readthedocs.yml  setup.cfg  setup.py  test_ctcsound.py
.github/workflows/: test.yml
ctcsound7/: __init__.py  _dll.py  _util.py  api6.py  api7.py  common.py  extra.py
docs/: conf.py  csound6.rst  csound7.rst  index.rst  introduction.rst  requirements.txt
docs/_build/doctrees/: csound6.doctree  csound7.doctree  environment.pickle  index.doctree  introduction.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  csound6.html  csound7.html  genindex.html  index.html  introduction.html  objects.inv  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/ctcsound7/: api6.html  api7.html
docs/_build/html/_sources/: csound6.rst  index.rst
examples/: 01 - Introduction.ipynb  02 - Threading.ipynb  02-performing.ipynb  csound7-perfthread-callback.py
test/: actions-test1.py  simple1.csd  simple2.csd  test1.py
