[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ctcsound7"
version = "0.7.2"
description = "Python bindings to the Csound API, supporting all versions of csound higher or equal to 6.18"
authors = [
    { name = "Eduardo Moguillansky", email = "eduardo.moguillansky@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.rst"
classifiers = [
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

requires-python = ">=3.9"
keywords = ["csound"]

dependencies = ["numpy>=2.0"]

[tool.setuptools]
packages = ['ctcsound7']

# Fix for error in uv plublish
license-files = []


[project.urls]
"Homepage" = "https://github.com/csound-plugins/ctcsound7"
