[metadata]
name = ctcsound7
version = attr: my_package.VERSION
author = Eduardo Moguillansky, Francois Pinot
author_email = eduardo.moguillansky@gmail.com
description = Python bindings to the Csound API, supporting all versions of csound higher or equal to 6.18
long_description = file: README.rst
keywords = csound
license = BSD-3-Clause
classifiers =
    Topic ::Multimedia :: Sound/Audio
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.16
    
# [options.package_data]
# * = *.txt, *.rst

